fix: mobile horizontal scrolling on requests and members tables

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
+
 body {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
